fix(ui): whitespace for customised pages  (#21897)
* remove extra space visible in glossary term

* revert PR

* remove extra space in glossary term

* update styles

* move height update to .less

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/tabs.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/tabs.less
@@ -98,3 +98,13 @@
     background-color: @primary-color;
   }
 }
+
+.glossary-details,
+.entity-details-page-tabs {
+  .ant-tabs.tabs-new {
+    .ant-tabs-tabpane {
+      background-color: @grey-9;
+      margin-bottom: @margin-md;
+    }
+  }
+}
